feat: 核心模块增强与架构优化 v2.1